[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Library with games to improve your brain."
authors = ["evgen <pythonubuntu12@gmail.com>"]
repository = 'https://github.com/melloru/python-project-49'
readme = "README.md"
packages = [
  { include = 'brain_games' },
]
classifiers = [
  'Topic :: Education',
  'Topic :: Hexlet',
]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = 'brain_games.scripts.brain_game:main'
brain-even = 'brain_games.scripts.even:main'
brain-calc = 'brain_games.scripts.calc:main'
brain-gcd = 'brain_games.scripts.gcd:main'
brain-progression = 'brain_games.scripts.progression:main'
brain-prime = 'brain_games.scripts.prime:main'

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
